--- a/Wodsoft.ComBoost.Website/Wodsoft.ComBoost.Website.csproj
+++ b/Wodsoft.ComBoost.Website/Wodsoft.ComBoost.Website.csproj
@@ -126,9 +126,12 @@
   <ItemGroup>
     <Compile Include="App_Start\BootstrapBundleConfig.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
+    <Compile Include="Controllers\DocumentController.cs" />
+    <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="LanguageViewEngine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -139,6 +142,16 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\docs.css" />
+    <Content Include="Content\docs.min.css" />
+    <Content Include="Content\Images\BoorstrapFiles.png" />
+    <Content Include="Content\Images\ComBoost.EntityFramework.NuGetResult.png" />
+    <Content Include="Content\Images\ComBoost.Mvc.Bootstrap.NuGetResult.png" />
+    <Content Include="Content\Images\ComBoost.Mvc.NuGetResult.png" />
+    <Content Include="Content\Images\ComBoost.Mvc.Unity.NuGetResult.png" />
+    <Content Include="Content\Images\ComBoost.NuGetResult.png" />
+    <Content Include="Content\Images\RateEditor.png" />
+    <Content Include="Content\Images\UnityControllerFactory.png" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -148,7 +161,9 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <None Include="Properties\PublishProfiles\file.pubxml" />
     <None Include="Scripts\jquery-2.1.0.intellisense.js" />
+    <Content Include="Scripts\docs.min.js" />
     <Content Include="Scripts\jquery-2.1.0.js" />
     <Content Include="Scripts\jquery-2.1.0.min.js" />
     <Content Include="Web.config" />
@@ -160,11 +175,31 @@
     </Content>
     <Content Include="Views\Web.config" />
     <Content Include="Scripts\jquery-2.1.0.min.map" />
-    <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\zh-cn\Shared\_Layout.cshtml" />
+    <Content Include="Views\zh-cn\Home\Index.cshtml" />
+    <Content Include="Views\zh-cn\Document\Start.cshtml" />
+    <Content Include="Views\zh-cn\Document\Entity.cshtml" />
+    <Content Include="Views\zh-cn\Document\MvcBootstrap.cshtml" />
+    <Content Include="Views\zh-cn\Document\EntityFramework.cshtml" />
+    <Content Include="Views\zh-cn\Document\Mvc.cshtml" />
+    <Content Include="Views\zh-cn\Document\MvcUnity.cshtml" />
+    <Content Include="Views\en-us\Document\Entity.cshtml">
+      <SubType>
+      </SubType>
+    </Content>
+    <Content Include="Views\en-us\Shared\_Layout.cshtml" />
+    <Content Include="Views\en-us\Home\Index.cshtml" />
+    <Content Include="Views\en-us\Document\EntityFramework.cshtml" />
+    <Content Include="Views\en-us\Document\Mvc.cshtml" />
+    <Content Include="Views\en-us\Document\MvcBootstrap.cshtml" />
+    <Content Include="Views\en-us\Document\MvcUnity.cshtml" />
+    <Content Include="Views\en-us\Document\Start.cshtml">
+      <SubType>
+      </SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Controllers\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
