update sample mvc

--- a/Samples/Company.Mvc/Company.Mvc.csproj
+++ b/Samples/Company.Mvc/Company.Mvc.csproj
@@ -171,10 +171,6 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201405110737225_InitialCreate.cs" />
-    <Compile Include="Migrations\201405110737225_InitialCreate.Designer.cs">
-      <DependentUpon>201405110737225_InitialCreate.cs</DependentUpon>
-    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -325,6 +321,7 @@
     <Content Include="Views\Shared\_PaginationButton.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
+    <Content Include="Views\Shared\Detail.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -338,11 +335,6 @@
       <Project>{34a7d375-8383-4c12-b49d-bae54f9cc0b0}</Project>
       <Name>Company.Entity</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Migrations\201405110737225_InitialCreate.resx">
-      <DependentUpon>201405110737225_InitialCreate.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
