--- a/Samples/Company.Mvc/Web.config
+++ b/Samples/Company.Mvc/Web.config
@@ -9,7 +9,8 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-Company.Mvc-20140511145250;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-Company.Mvc-20140511145250.mdf" />
+    <!--<add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-Company.Mvc-20140511145250;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-Company.Mvc-20140511145250.mdf" />-->
+    <add name="DataContext" connectionString="server=172.0.7.253;database=Company;Uid=sa;Pwd=123@abc;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
